day3/configmap-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod
spec:
  containers:
    - name: test-container
      image: busybox
      command: [ "/bin/sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
      - name: config2-volume
        mountPath: /etc/config2
  volumes:
    - name: config-volume
      configMap:
        name: configuration
    - name: config2-volume
      configMap:
        name: my-configmap
