day3/nfs-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-volume-pod
  labels:
    app: nfs-volume-pod
spec:
  volumes:
  - name: nfs-storage
    persistentVolumeClaim:
      claimName: nfs-pvc
  containers:
  - name: container1
    image: nginx
    volumeMounts:
    - mountPath: "/nfs"
      name: nfs-storage
