day3/node-name-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: node-name-pod
  name: node-name-pod
spec:
  nodeName: worker02
  containers:
  - image: nginx
    name: node-name-pod
    resources: {}
