day3/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
    - name: test-container
      image: busybox
      command: [ "/bin/sh", "-c", "env; while true; do sleep 3600; done" ]
      volumeMounts:
        - name: secret-vol
          mountPath: /secrets
  volumes:
    - name: secret-vol
      secret:
        secretName: my-secret
