day3/with-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
  labels:
    kubernetes.io/application: db
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: country
            operator: In
            values:
            - poland
            - france
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: env
            operator: In
            values:
            - production
      - weight: 2
        preference:
          matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - worker02
  containers:
  - name: with-node-affinity
    image: registry.k8s.io/pause:2.0
